--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p>
                 I have 2 years of experience working as a software engineer at Indeed, where I have worked as a backend engineer for rapidly experimenting with new business ideas under Indeed Research. I have developed the backend service for the 
                 <a href="https://apps.apple.com/us/app/simply-nurses-find-rn-jobs/id1611042106">SimplyNurses app</a>(a new messaging-first mobile app that matches and connects employers and job seekers)
-                I have also completed my intership at Indeed where I have automated the process of shards generation process used in the Employee review.
+                I have also completed my internship at Indeed where I have automated the process of shards generation process used in the Employee review.
               </p>
               <p>
                 I have experience in a variety of programming languages and frameworks.
@@ -165,7 +165,7 @@
                   Hyderabad, India &nbsp; · &nbsp; <em> Aug 2018 - July 2020 </em>
                   <br>
                   <p>
-                    Full time honours student at CVIT (Vision) lab under Prof Vineet Gandhi. Worked on the problem of Saliency Prediction.
+                    Full-time honors student at CVIT (Vision) lab under Prof Vineet Gandhi. Worked on the problem of Saliency Prediction.
                   </p>
                   <p>
                     Proposed a novel Spatio-temporal encoder-decoder architecture combining audio-visual features for efficiently addressing the challenges of saliency detection in videos. (<a href="https://github.com/agentcap/ViNet">Project Page</a>)
@@ -426,6 +426,8 @@
               </tr>  </table>
             </td>
           </tr>
+
+          <!-- Video Google, Image Processing, Socket Programming, Lecture Recording, Barcode Scanner -->
 
         </tbody></table>
 
